companion-backend/deployments/kubernetes/otp-be-nl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-be-nl
  name: otp-be-nl
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: otp-be-nl
    spec:
      containers:
      - name: otp-be-nl
        image: mytrac/otp-be-nl:v3.4
        resources:
          limits:
            memory: "15Gi"
        ports:
          - containerPort: 8080
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-be-nl
  name: otp-be-nl
spec:
  type: NodePort
  ports:
  - name: otp-be-nl-server
    port: 8080
  selector:
    io.kompose.service: otp-be-nl
status:
  loadBalancer: {}
