companion-backend/deployments/kubernetes/otp-ca.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-ca
  name: otp-ca
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: otp-ca
    spec:
      containers:
      - name: otp-ca
        image: mytrac/otp-ca:v2.0
        resources:
          limits:
            memory: "4Gi"
        ports:
          - containerPort: 8080
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-ca
  name: otp-ca
spec:
  type: NodePort
  ports:
  - name: otp-ca-server
    port: 8080
  selector:
    io.kompose.service: otp-ca
status:
  loadBalancer: {}
