companion-backend/deployments/kubernetes/otp-fi.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-fi
  name: otp-fi
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: otp-fi
    spec:
      containers:
      - name: otp-fi
        image: mytrac/otp-fi:v1.0
        resources:
          limits:
            memory: "12Gi"
        ports:
          - containerPort: 8080
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-fi
  name: otp-fi
spec:
  type: NodePort
  ports:
  - name: otp-fi-server
    port: 8080
  selector:
    io.kompose.service: otp-fi
status:
  loadBalancer: {}
