companion-backend/deployments/kubernetes/otp-gr.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-gr
  name: otp-gr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: otp-gr
    spec:
      containers:
      - name: otp-gr
        image: mytrac/otp-gr:v3.0
        resources:
          limits:
            memory: "4Gi"
        ports:
          - containerPort: 8080
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otp-gr
  name: otp-gr
spec:
  type: NodePort
  ports:
  - name: otp-gr-server
    port: 8080
  selector:
    io.kompose.service: otp-gr
status:
  loadBalancer: {}
