companion-backend/deployments/kubernetes/ws-mytrac-activity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  #labels:
  #  io.kompose.service: ws-mytrac-activity
  name: ws-mytrac-activity
spec:
  selector:
    matchLabels:
      app: ws-mytrac-activity
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ws-mytrac-activity
        app: ws-mytrac-activity
    spec:
      containers:
      - name: ws-mytrac-activity
        image: mytrac/ws-mytrac-activity:v1.1.13
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: deploy-conf
          mountPath: /root/conf
          readOnly: true

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=buoyant-episode-216912:europe-west1:mysql-share=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
        - name: deploy-conf
          secret:
            secretName: deploy-conf
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ws-mytrac-activity
  name: ws-mytrac-activity
spec:
  type: NodePort
  ports:
  - name: activity-server
    port: 8080
    #targetPort: 8080
  selector:
    io.kompose.service: ws-mytrac-activity
status:
  loadBalancer: {}
